fixed payment pictures

--- a/index.html
+++ b/index.html
@@ -235,19 +235,19 @@
                     <h2 class="pl-3">Select Payment Options</h2>
                     <div class="row px-1 my-4">
                         <div class="col">
-                            <img class="img-fluid" src="/uaimg/paypal.png" alt="paypal payment image">
+                            <img class="img-fluid" src="uaimg/paypal.png" alt="paypal payment image">
                         </div>
                         <div class="col">
-                            <img class="img-fluid" src="/uaimg/paypal.png" alt="paypal payment image">
+                            <img class="img-fluid" src="uaimg/paypal.png" alt="paypal payment image">
                         </div>
                         <div class="col">
-                            <img class="img-fluid" src="/uaimg/paypal.png" alt="paypal payment image">
+                            <img class="img-fluid" src="uaimg/paypal.png" alt="paypal payment image">
                         </div>
                         <div class="col">
-                            <img class="img-fluid" src="/uaimg/paypal.png" alt="paypal payment image">
+                            <img class="img-fluid" src="uaimg/paypal.png" alt="paypal payment image">
                         </div>
                         <div class="col">
-                            <img class="img-fluid" src="/uaimg/paypal.png" alt="paypal payment image">
+                            <img class="img-fluid" src="uaimg/paypal.png" alt="paypal payment image">
                         </div>
                     </div>
                 </div>
