--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
                 </div>
                 <!--payment options end-->
                 <!--payment form start-->
-                <form class="form-container px-3 pt-5 pb-4">
-                    <div class="form-row">
+                <form class="form-container px-3 pt-5 pb-4 px-lg-5">
+                    <div class="form-row px-lg-2">
                         <div class="form-group col-12">
                             <label for="inputName"><span class="text-danger">*</span> Card Name:</label>
                             <input type="text" class="form-control" id="inputName" placeholder="Enter Card Name">
