folder structure update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="uacss/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/uacss/style.css">
     <!--bootstrap-select jQuery plugin css-->
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
@@ -235,19 +235,19 @@
                     <h2 class="pl-3">Select Payment Options</h2>
                     <div class="row px-1 my-4">
                         <div class="col">
-                            <img class="img-fluid" src="uaimg/paypal.png" alt="paypal payment image">
+                            <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
                         </div>
                         <div class="col">
-                            <img class="img-fluid" src="uaimg/paypal.png" alt="paypal payment image">
+                            <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
                         </div>
                         <div class="col">
-                            <img class="img-fluid" src="uaimg/paypal.png" alt="paypal payment image">
+                            <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
                         </div>
                         <div class="col">
-                            <img class="img-fluid" src="uaimg/paypal.png" alt="paypal payment image">
+                            <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
                         </div>
                         <div class="col">
-                            <img class="img-fluid" src="uaimg/paypal.png" alt="paypal payment image">
+                            <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
                         </div>
                     </div>
                 </div>
