fixed hamburger icon and search placeholder

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <section class="container-fluid container-custom">
          <!-- Small screens search bar -->
          <form class="d-md-none mobile-search my-2">
-            <input type="text" class="mobile-search__input" placeholder="search">
+            <input type="text" class="mobile-search__input" placeholder="Search payment history">
             <svg class="dashboard-icon mobile-search__icon" viewBox="0 0 20 20" fill="none"
                xmlns="http://www.w3.org/2000/svg">
                <path
