--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-   <link id="link-id" rel="stylesheet" href="./assets/uacss/main.css">
-   <link rel="stylesheet" type="text/css" href="assets/uacss/style.css">
+   <link id="link-id" rel="stylesheet" href="/assets/uacss/nav.css">
+   <link rel="stylesheet" href="/assets/uacss/inner-nav.css">
+   <link rel="stylesheet" type="text/css" href="/assets/uacss/style.css">
    <!--bootstrap-select jQuery plugin css-->
    <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
@@ -22,7 +23,7 @@
 <body class="collapse-sidebar">
 
    <aside class="sidebar position-fixed h-100 position-relative d-none d-md-block">
-      <a class="navbar-brand" href="#"><img class="img-fluid aside-logo logo mt-xl" src="./assets/uaimg/GetViral.svg"
+      <a class="navbar-brand" href=""><img class="img-fluid aside-logo logo mt-xl" src="/assets/uaimg/GetViral.svg"
             alt=""></a>
       <ul class="sidebar__lists list-unstyled">
          <li class="py-2 py-xl-3 my-3 d-flex align-items-center"><span class="sidebar__icon pr-3"><svg
@@ -80,7 +81,7 @@
    <header class="d-md-none header sticky-top">
       <nav class="navbar navbar-expand-md navbar-light navbar-bg-custom">
          <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img class="img-fluid logo" src="./assets/uaimg/GetViral.svg" alt=""></a>
+            <a class="navbar-brand" href="#"><img class="img-fluid logo" src="/assets/uaimg/GetViral.svg" alt=""></a>
             <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#navbarNav"
                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
@@ -143,6 +144,19 @@
                </div>
             </div>
          </div>
+         <!-- SMALL INNER NAV  -->
+         <div class="col-12">
+            <div class="my-3 small-inner-nav">
+               <ul class="list-unstyled d-flex align-items-center justify-content-center mb-0">
+                  <li><a class="header__link mr-3" href="">Overview</a></li>
+                  <li class="header__link mr-3"><a class="header__link" href="">Campaigns</a>
+                  </li>
+                  <li><a class="header__link-list-active header__link-active header_link" href="#">Upgrade Account</a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+         <!-- SMALL INNER NAV  -->
       </nav>
    </header>
 
@@ -160,6 +174,7 @@
                            fill="#362F74" />
                      </svg>
                   </button>
+
                   <!-- Open button -->
                   <button class="hamburger-button d-none" id="open-sidebar">
                      <svg class="hamburger-menu" width="37" height="25" viewBox="0 0 37 25" fill="none"
@@ -170,9 +185,21 @@
                      </svg>
 
                   </button>
+
+                  <!-- BIG SCREEN INNER PAGE NAV STARTS  -->
+                  <div class="mr-auto ml-5 big-inner-nav">
+                     <ul class="list-unstyled d-flex align-items-center justify-content-between mb-0">
+                        <li><a class="header__link mr-3" href="">Overview</a></li>
+                        <li class="header__link mr-3"><a class="header__link" href="">Campaigns</a>
+                        </li>
+                        <li><a class="header__link-list-active  header__link-active" href="#">Upgrade Account</a></li>
+                     </ul>
+                  </div>
+                  <!-- BIG SCREEN INNER PAGE NAV ENDS  -->
+
                   <div class="d-none d-md-block">
                      <div class="d-flex justify-content-end align-items-center">
-                        <img class="img-fluid profile-picture pr-2" src="./assets/uaimg/profile picture.svg" alt="">
+                        <img class="img-fluid profile-picture pr-2" src="/assets/uaimg/profile picture.svg" alt="">
                         <span>Joshua</span>
                      </div>
                   </div>
@@ -371,19 +398,19 @@
                <h2 class="pl-3">Select Payment Options</h2>
                <div class="row px-1 my-4">
                   <div class="col">
-                     <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
+                     <img class="img-fluid" src="/assets/uaimg/paypal.png" alt="paypal payment image">
                   </div>
                   <div class="col">
-                     <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
+                     <img class="img-fluid" src="/assets/uaimg/paypal.png" alt="paypal payment image">
                   </div>
                   <div class="col">
-                     <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
+                     <img class="img-fluid" src="/assets/uaimg/paypal.png" alt="paypal payment image">
                   </div>
                   <div class="col">
-                     <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
+                     <img class="img-fluid" src="/assets/uaimg/paypal.png" alt="paypal payment image">
                   </div>
                   <div class="col">
-                     <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
+                     <img class="img-fluid" src="/assets/uaimg/paypal.png" alt="paypal payment image">
                   </div>
                </div>
             </div>
@@ -419,9 +446,15 @@
                      <input type="month" class="form-control" id="inputdate" placeholder="mm/yy">
                   </div>
                   <div class="form-group  col-6 col-md">
-                     <label for="inputCVV"><span class="text-danger">*</span> CVV Number &nbsp; &#9072;</label>
+                     <label for="inputCVV"><span class="text-danger">*</span> CVV Number &nbsp; <a
+                           class="text-dark q-mark-info" href="#" data-toggle="tooltip"
+                           title="The three digit number at the back of your card">&#9072;</a></label>
                      <input type="password" class="form-control" id="inputCVV" placeholder="***">
                   </div>
+                  <!--tooltip trigger via JS-->
+                  <script>
+                     $('.q-mark-info').tooltip(options)
+                  </script>
                </div>
             </form>
             <button type="submit" class="btn btn-primary btn-block pay-btn my-4">Make Payment</button>
@@ -463,7 +496,7 @@
    <!--bootstrap-select jQuery plugin js-->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
    <!--nav js-->
-   <script src="./assets/uajs/main.js"></script>
+   <script src="/assets/uajs/nav.js"></script>
 </body>
 
 </html>
