--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-   <link id="link-id" rel="stylesheet" href="/assets/uacss/nav.css">
-   <link rel="stylesheet" href="/assets/uacss/inner-nav.css">
-   <link rel="stylesheet" type="text/css" href="/assets/uacss/style.css">
+   <link id="link-id" rel="stylesheet" href="assets/uacss/nav.css">
+   <link rel="stylesheet" href="assets/uacss/inner-nav.css">
+   <link rel="stylesheet" type="text/css" href="assets/uacss/style.css">
    <!--bootstrap-select jQuery plugin css-->
    <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
