--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="collapse-sidebar">
 
    <aside class="sidebar position-fixed h-100 position-relative d-none d-md-block">
-      <a class="navbar-brand" href=""><img class="img-fluid aside-logo logo mt-xl" src="/assets/uaimg/GetViral.svg"
+      <a class="navbar-brand" href=""><img class="img-fluid aside-logo logo mt-xl" src="assets/uaimg/GetViral.svg"
             alt=""></a>
       <ul class="sidebar__lists list-unstyled">
          <li class="py-2 py-xl-3 my-3 d-flex align-items-center"><span class="sidebar__icon pr-3"><svg
@@ -199,7 +199,7 @@
 
                   <div class="d-none d-md-block">
                      <div class="d-flex justify-content-end align-items-center">
-                        <img class="img-fluid profile-picture pr-2" src="/assets/uaimg/profile picture.svg" alt="">
+                        <img class="img-fluid profile-picture pr-2" src="assets/uaimg/profile picture.svg" alt="">
                         <span>Joshua</span>
                      </div>
                   </div>
@@ -398,19 +398,19 @@
                <h2 class="pl-3">Select Payment Options</h2>
                <div class="row px-1 my-4">
                   <div class="col">
-                     <img class="img-fluid" src="/assets/uaimg/paypal.png" alt="paypal payment image">
+                     <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
                   </div>
                   <div class="col">
-                     <img class="img-fluid" src="/assets/uaimg/paypal.png" alt="paypal payment image">
+                     <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
                   </div>
                   <div class="col">
-                     <img class="img-fluid" src="/assets/uaimg/paypal.png" alt="paypal payment image">
+                     <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
                   </div>
                   <div class="col">
-                     <img class="img-fluid" src="/assets/uaimg/paypal.png" alt="paypal payment image">
+                     <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
                   </div>
                   <div class="col">
-                     <img class="img-fluid" src="/assets/uaimg/paypal.png" alt="paypal payment image">
+                     <img class="img-fluid" src="assets/uaimg/paypal.png" alt="paypal payment image">
                   </div>
                </div>
             </div>
