--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
    <header class="d-md-none header sticky-top">
       <nav class="navbar navbar-expand-md navbar-light navbar-bg-custom">
          <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img class="img-fluid logo" src="/assets/uaimg/GetViral.svg" alt=""></a>
+            <a class="navbar-brand" href="#"><img class="img-fluid logo" src="assets/uaimg/GetViral.svg" alt=""></a>
             <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#navbarNav"
                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
