--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
    <!--bootstrap-select jQuery plugin js-->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
    <!--nav js-->
-   <script src="/assets/uajs/nav.js"></script>
+   <script src="assets/uajs/nav.js"></script>
 </body>
 
 </html>
