--- a/index.html
+++ b/index.html
@@ -452,9 +452,7 @@
                      <input type="password" class="form-control" id="inputCVV" placeholder="***">
                   </div>
                   <!--tooltip trigger via JS-->
-                  <script>
-                     $('.q-mark-info').tooltip(options)
-                  </script>
+
                </div>
             </form>
             <button type="submit" class="btn btn-primary btn-block pay-btn my-4">Make Payment</button>
@@ -497,6 +495,9 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
    <!--nav js-->
    <script src="assets/uajs/nav.js"></script>
+   <script>
+      $('.q-mark-info').tooltip();
+   </script>
 </body>
 
 </html>
