--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                   </div>
                   <div class="form-group  col-6 col-md">
                      <label for="inputCVV"><span class="text-danger">*</span> CVV Number &nbsp; <a
-                           class="text-dark q-mark-info" href="#" data-toggle="tooltip"
+                           class="text-dark q-mark-info" data-toggle="tooltip"
                            title="The three digit number at the back of your card">&#9072;</a></label>
                      <input type="password" class="form-control" id="inputCVV" placeholder="***">
                   </div>
