--- a/index.html
+++ b/index.html
@@ -448,10 +448,11 @@
                   <div class="form-group  col-6 col-md">
                      <label for="inputCVV"><span class="text-danger">*</span> CVV Number &nbsp; <a
                            class="text-dark q-mark-info" data-toggle="tooltip"
-                           title="The three digit number at the back of your card">&#9072;</a></label>
+                           title="The three digit number at the back of your card"><img class="img-fluid"
+                              src="assets/uaimg/qmarkcircle.png"></a></label>
                      <input type="password" class="form-control" id="inputCVV" placeholder="***">
                   </div>
-                  <!--tooltip trigger via JS-->
+
 
                </div>
             </form>
@@ -495,6 +496,7 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
    <!--nav js-->
    <script src="assets/uajs/nav.js"></script>
+   <!--tooltip trigger via JS-->
    <script>
       $('.q-mark-info').tooltip();
    </script>
