--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
          <div class="col-12">
             <div class="my-3 small-inner-nav">
                <ul class="list-unstyled d-flex align-items-center justify-content-center mb-0">
-                  <li><a class="header__link mr-3" href="">Overview</a></li>
-                  <li class="header__link mr-3"><a class="header__link" href="">Campaigns</a>
+                  <li><a class="header__link mr-3" href="https://elcozy.github.io/get-vrl-dashboard/">Overview</a></li>
+                  <li class="header__link mr-3"><a class="header__link" href="https://envato-test.netlify.app/">Campaigns</a>
                   </li>
                   <li><a class="header__link-list-active header__link-active header_link" href="#">Upgrade Account</a>
                   </li>
