--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
             <div class="my-3 small-inner-nav">
                <ul class="list-unstyled d-flex align-items-center justify-content-center mb-0">
                   <li><a class="header__link mr-3" href="https://elcozy.github.io/get-vrl-dashboard/">Overview</a></li>
-                  <li class="header__link mr-3"><a class="header__link" href="https://envato-test.netlify.app/">Campaigns</a>
+                  <li class="header__link mr-3"><a class="header__link"
+                        href="https://envato-test.netlify.app/">Campaigns</a>
                   </li>
                   <li><a class="header__link-list-active header__link-active header_link" href="#">Upgrade Account</a>
                   </li>
@@ -189,8 +190,10 @@
                   <!-- BIG SCREEN INNER PAGE NAV STARTS  -->
                   <div class="mr-auto ml-5 big-inner-nav">
                      <ul class="list-unstyled d-flex align-items-center justify-content-between mb-0">
-                        <li><a class="header__link mr-3" href="">Overview</a></li>
-                        <li class="header__link mr-3"><a class="header__link" href="">Campaigns</a>
+                        <li><a class="header__link mr-3" href="https://elcozy.github.io/get-vrl-dashboard/">Overview</a>
+                        </li>
+                        <li class="header__link mr-3"><a class="header__link"
+                              href="https://envato-test.netlify.app/">Campaigns</a>
                         </li>
                         <li><a class="header__link-list-active  header__link-active" href="#">Upgrade Account</a></li>
                      </ul>
